Edited the transcendental logic

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -67,16 +67,16 @@ Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics i
 We will not make him wait.
 
 \section*{The Transcendental Logic}
-As the faculty of sensibility deals with sensations, the faculty of understanding deals with concepts. Sensibility without understanding is only reaction, while understanding without sensation is but nothing but computation. It is the union of both sensibility and understanding which yields cognition, that fruit of the mind so characteristic of the human animal. As the science of understanding is named logic, Kant brings us to this aptly named summit of the transcendental logic. The journey takes place in two steps. We first acknowledge that the characteristic nature of any concept is that of \emph{function}: "the unity of the act of arranging various presentations under one common presentation" \autocite[B93]{hackett}. Given a raw and unorganised manifold of intuitive presentations, the functional process is one in which such a manifold is unified under a singular concept. That is how a whiff of asphalt, the roar of an engine, and the sparkle of sun-shined chrome all combine to form the singular concept of `race car.'
+As the faculty of sensibility deals with sensations, the faculty of understanding deals with concepts. Sensibility without understanding is only reaction, while understanding without sensation is but nothing but computation. It is the union of both sensibility and understanding which yields cognition, that fruit of the mind so characteristic of the human animal. As the science of understanding is named logic, Kant brings us to this aptly named summit of the \emph{transcendental logic}. The ascent takes place in two steps. We first acknowledge that the characteristic nature of any concept is that of \emph{function}: "the unity of the act of arranging various presentations under one common presentation" \autocite[B93]{hackett}. Given a raw and unorganised manifold of intuitive presentations, the functional process is one in which such a manifold is unified under a singular concept. That is how a whiff of asphalt, the roar of an engine, and the sparkle of sun-shined chrome all combine to form the singular concept of `race car.'
 
 But yet all such unity is also difference -- for every way in which various presentations are combined, we also perform the negative act of excluding other, unrelated presentations. Only in such a manner do our concepts have any order. This means that concepts are also \emph{judgements} -- acts of discernment and differentiation. Thus lies the basis step of Kant's inductive proof.\footnote{A mathematical analogy. Inductive proofs are completed in two steps, a \emph{basis} step, and an \emph{inductive} step.} As all acts of understanding are concepts, and all concepts judgement\ldots\ therefore all understanding is judgement. "Now since all acts of the understanding can be reduced to judgments, the understanding as such can be presented as a power of judgment" \autocite[B94]{hackett}. This reductive method in which we reduce the problem of finding the a prioriae of concepts to that of judgements is an indispensable one -- as a complete, transcendental analysis of the different modes of judgement is a far easier task, than the analysis of infinite unbounded concepts. We are able to start our analysis by drawing upon the prior scholarship of mundane logic, much like beginning a difficult ascent from a pre-established base camp.
 
 \input{sections/table-judgements.tex}
 
-However, upon what grounds do we have to reduce the power of understanding, into a power of judgement? Unlike a mathematical proof that may demonstrate equivalency through formal means (e.g. using the side-angle-side postulate to prove the similarity of two different triangles), this leap from concepts to judgements is an unintuitive\footnote{This is a colloquial usage of the word, no relation to Kantian intuition} one. As tourists unfamiliar to the customs of this land, we are forgiven to voice our suspicions to our guide. There are two problems in Kant's approach. On one hand, the given space of all possible concepts (a concept-space, to borrow a topological vocabulary) may be larger than judgement-space. On the other hand, the four logical judgements that Kant provides may be incomplete. The first question he answers on the basis that the functional nature of concepts makes them formally analogous to judgement (the enunciation which we have walked through in the above paragraph). It is the latter question -- that of whether or not the judgements provided are complete -- which serves as the essential linchpin that holds the Kantian wagon together. Kant himself recognises the dependency of his transcendental logic on furnishing a complete set of judgements:
+However, upon what grounds do we have to reduce the power of understanding, into a power of judgement? Unlike a mathematical proof that may demonstrate equivalency through formal means (e.g. using the side-angle-side postulate to prove the similarity of two different triangles), this leap from concepts to judgements is an unintuitive\footnote{This is a colloquial usage of the word, no relation to Kantian intuition.} one. As tourists unfamiliar to the customs of this land, we are forgiven to voice our suspicions to our guide. There are two problems in Kant's approach. On one hand, the given space of all possible concepts (a concept-space, to borrow a topological vocabulary) may be larger than judgement-space. On the other hand, the four logical judgements that Kant provides may be incomplete. The first question he answers on the basis that the functional nature of concepts makes them formally analogous to judgement (the enunciation which we have walked through in the above paragraph). It is the latter question -- that of whether or not the judgements provided are complete -- which serves as the essential linchpin that holds the Kantian wagon together. Kant himself recognises the dependency of his transcendental logic on furnishing a complete set of judgements:
 
 \begin{quote}
-  These concepts [judgements] can be collected in an essay that will be more or less comprehensive \ldots\ but by this -- as it were, mechanical -- procedure, we can never reliably deterine at what point that inquiry will be completed.
+  These concepts [judgements] can be collected in an essay that will be more or less comprehensive \ldots\ but by this -- as it were, mechanical -- procedure, we can never reliably determine at what point that inquiry will be completed.
 
   \autocite[B92]{hackett}
 \end{quote}
@@ -90,6 +90,8 @@ Using the four logical judgements (or the `logical function in judgements', as p
 
 \noindent
 These twelve categories which are given to us from the faculty of understanding serve as the same transcendental foundation for conception, as the a priori forms of space and time relate to intuition. Having met these elements which compose the second part of the transcendental doctrine of elements, we are now once again left to ask of their utility. "What do these categories tell us about metaphysics? Are space, time, and the categories sufficient grounds for a complete metaphysical foundation?" The answer to this question is a nuanced one. For the transcendental elements of space, time, and category, are still insufficient in isolation. As with chemical elements, they are inert in their pure, transcendentally isolated state. They are the mere feedstock of reactions, which yield the dizzying chemistry that is cognition. For as we have hinted at throughout our journey, it is the union of intuition and concept which leads to cognition.
+
+\section*{The Union of Sensibility and Understanding}
 
 This union is conceived of originally as a mundane\footnote{As opposed to transcendental.} one. For it seems that the imposition of a sensible intuition upon understanding leads by it's very nature to an \emph{empirical concept}. That is, a cognition which refers to an object of intuition. This would make this marriage a metaphysically barren one, for such empirical cognitions are fundamentally \emph{objective}, and hence contingent -- there is no space for a priori knowledge here. There can be no morganatic marriage\footnote{A marriage between persons of unequal social rank, e.g. Archduke Franz Ferdinand and Sophie Chotek.} in which we can salvage the union -- for the nature of a category is to bring differing contents into synthesis, and the pure element of intuition are by their definition, contentless. Our exploration of the transcendental landscape would end by necessity, at this insurmountable cliff. This appears to be the case, at least to the untrained eyes of a visitor. However, Kant is able to solve this seemingly impossible unity, through an act of transcendental clarity.
 
