Edited the synthetic unity of apperception

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -96,7 +96,7 @@ These twelve categories which are given to us from the faculty of understanding 
 This union is conceived of originally as a mundane\footnote{As opposed to transcendental.} one. For it seems that the imposition of a sensible intuition upon understanding leads by it's very nature to an \emph{empirical concept}. That is, a cognition which refers to an object of intuition. This would make this marriage a metaphysically barren one, for such empirical cognitions are fundamentally \emph{objective}, and hence contingent -- there is no space for a priori knowledge here. There can be no morganatic marriage\footnote{A marriage between persons of unequal social rank, e.g. Archduke Franz Ferdinand and Sophie Chotek.} in which we can salvage the union -- for the nature of a category is to bring differing contents into synthesis, and the pure element of intuition are by their definition, contentless. Our exploration of the transcendental landscape would end by necessity, at this insurmountable cliff. This appears to be the case, at least to the untrained eyes of a visitor. However, Kant is able to solve this seemingly impossible unity, through an act of transcendental clarity.
 
 \noindent
-Recall that empirical concepts do not refer to singular, individual intuitions -- but rather, they refer to manifolds of intuition, as exemplified by the earlier `race car' example. These manifolds of intuition, which we talk about in the transcendental sense (i.e abstracted away from their content) still contain the a priori forms of space and time, as these are the necessary conditions to intuition. The existence of these a priori manifolds, which are not experience, but only the possibility of experience\footnote{Kant sometimes uses the word presentation, which is a more general form that also encompasses non-intuitive sources.} (as they contain the formal a prioriae of space and time) -- yields a transcendental manifold which is capable of union with the categories. But what manner of a manifold is this? An abstract and unconcerned manifold\footnote{A manifold that does not contain an experiential subject. I have not explained this distinction yet, but it will become clear in due course.} of possible experience cannot ever be united in synthesis with the categories of pure understanding. Categories are just the a priori forms of judgements, e.g. the form of $((P \lor Q) \land \neg P) \to Q$\footnote{propositional notation for a disjunctive judgement}. Even though the intuitive manifold provides us with the propositional terms $P, Q$ (to extend the propositional logic metaphor), and the categories provide us with all the brackets and squiggly signs; the ultimate logical implication (denoted by the symbol `$\to$') is found in neither. Hence, with a simply unconcerned manifold, there is can be no union, and hence no cognition.
+Recall that empirical concepts do not refer to singular, individual intuitions -- but rather, they refer to manifolds of intuition, as exemplified by the earlier `race car' example. These manifolds of intuition, which we talk about in the transcendental sense (i.e abstracted away from their content) still contain the a priori forms of space and time, as these are the necessary conditions to intuition. The existence of these a priori manifolds, which are not experience, but only the possibility of experience\footnote{Kant sometimes uses the word presentation, which is a more general form that also encompasses non-intuitive sources.} (as they contain the formal a prioriae of space and time) -- yields a transcendental manifold which is capable of union with the categories. But what manner of a manifold is this? An abstract and unconcerned manifold\footnote{A manifold that does not contain an experiential subject. I have not explained this distinction yet, but it will become clear in due course.} of possible experience can never be united in synthesis with the categories of pure understanding. Categories are just the a priori forms of judgements, e.g. the form of $((P \lor Q) \land \neg P) \to Q$\footnote{Propositional notation for a disjunctive judgement.}. Even though the intuitive manifold provides us with the propositional terms $P, Q$ (to extend the propositional logic metaphor), and the categories provide us with all the brackets and squiggly signs; the ultimate logical implication (denoted by the symbol `$\to$') is found in neither. Hence, with a simply unconcerned manifold, there is can be no union, and hence no cognition.
 
 This leads us to what is perhaps \emph{the} most thought-provoking idea in Kant's entire \emph{Critique of Pure Reason}, which is the \emph{synthetic unity of apperception}. This synthetic unity of apperception is the unifying act which is capable of bringing intuition together with concepts, yielding cognition. It is the `$\to$' symbol of every judgement. "This is what the little relational word \emph{is} in judgements intends [to indicate], in order to distinguish the objective unity of given presentations [the manifold] from the subjective one" \autocite[B142]{hackett} Kant leads us on, explaining:
 
@@ -109,7 +109,7 @@ This leads us to what is perhaps \emph{the} most thought-provoking idea in Kant'
 \end{quote}
 
 \noindent
-Kant goes on to further elaborate regarding the offspring of such a union, which draw their resemblance from space (corresponding to the outer sense) and time (corresponding to the inner sense), in sections entitled \emph{On the Synthesis of Apprehension in Intuition}, and the \emph{On the Synthesis of Reproduction in Imagination}. However these discussions are merely the procedural lemmae of his transcendental analytic, contingent on the synthetic unity of apperception, and we will not elaborate upon them here. Instead we will spend the rest of our time examining the synthetic unity of apperception, this unifying force which marries sensibility and understanding.
+Our guide goes on to elaborate on the offspring of such a union, which draw their resemblance from space (corresponding to the outer sense) and time (corresponding to the inner sense), in sections entitled \emph{On the Synthesis of Apprehension in Intuition}, and the \emph{On the Synthesis of Reproduction in Imagination}. However these discussions are merely the procedural lemmae of his transcendental analytic, contingent on the synthetic unity of apperception, and we will not elaborate upon them here. Instead we will spend the rest of our time examining the synthetic unity of apperception, this unifying force which marries sensibility and understanding.
 
 \section*{The Synthetic Unity of Apperception}
 What makes the synthetic unity of apperception so essential to the process of cognition? Kant canonicalises it as the basis for the possibility of understanding in respect to intuition. His presentation is as follows:
@@ -122,7 +122,7 @@ What makes the synthetic unity of apperception so essential to the process of co
 \end{enumerate}
 
 \noindent
-On a surface level, it is clear that all possible cogition (i.e. `intuition in reference to understanding') requires the synthetic unity of apperception. However the more interesting realisation is that this also gives all of our intuitions a fundamentally subjective nature -- there will always have to be an `\emph{I think}' particle attached to our cognitions, a self-referential piece that ties these cognitions to the cognitive subject. It is never possible to \emph{cognise} in a manner where the subject is removed from the object. Hence, \emph{all objective cognition is dependent on the cognising subject}.
+On a surface level, it is clear that all possible cogition (i.e. `intuition in reference to understanding') requires the synthetic unity of apperception. However the more interesting realisation is that this also gives all of our intuitions a fundamentally subjective nature -- there will always have to be an `\emph{I think}' particle attached to our cognitions, a self-referential burdock that ties these cognitions to the cognitive subject. It is never possible to \emph{cognise} in a manner where the subject is removed from the object. Hence, \emph{all objective cognition is dependent on the cognising subject}.
 
 This is truly a audacious conclusion, and it is important for the traveller to not completely misunderstand it. For we are \emph{not} saying that all cognition is subjective, in the sense of wayward Idealism. Rather, the presence of the subject in cognition is an a priori necessity for objective cognition in the first place:
 
@@ -141,7 +141,7 @@ It is through the subject, that different intuitions are brought into unity. Wit
   \autocite[B143]{hackett}
 \end{quote}
 
-This transcendental process, in which the presence of the subject (in the form of the synthetic unity of apperception) is contained within the cognitive process, but yet somehow `cancels out' the subjectivity of presentations -- allowing true objective cognition -- is a gymnastic leap of thought of Comănecic\footnote{Nadia Comăneci, a Romanian gymnast who achieved the first perfect score at the Olympics.} proportions. It is important that we understand this synthetic unity of apperception, for it speaks to the deep nature of how cognition works. A simplified demonstration can be given in the following manner:
+This transcendental process, in which the presence of the subject (in the form of the synthetic unity of apperception) is contained within the cognitive process, but yet somehow `cancels out' the subjectivity of presentations -- allowing true objective cognition -- is a gymnastic leap of thought of Comănecian\footnote{Nadia Comăneci, a Romanian gymnast who achieved the first perfect score at the Olympics.} proportions. It is important that we understand this synthetic unity of apperception, for it speaks to the deep nature of how cognition works. A simplified demonstration can be given in the following manner:
 
 % Sofia wrote this note:
 % dear shen your company and friendship are very dear to me. go and fim uh finish your eesay ;)
@@ -151,8 +151,8 @@ This transcendental process, in which the presence of the subject (in the form o
   \item Through the faculty of understanding, we yield conception.
   \item We begin the synthetic process of merging sensibility and understanding:
   \begin{enumerate}
-    \item The manifolds of intuition, which are subjective to the sensible self, contain the a priori of space, time, and the synthetic unity of apperception.
-    \item The a priori categories behind concepts are by necessity, subjective to the judgemental self.
+    \item The manifolds of intuition, which are \emph{subjective to the sensible self}, contain the a prioriae of space, time, and the synthetic unity of apperception.
+    \item The a priori categories behind concepts are by necessity, \emph{subjective to the judgemental self}.
     \item The two subjective elements are combined synthetically through their common denominator.
   \end{enumerate}
   \item The resulting union of intuition and concept yields cognition
