Edited the Kantian theory of mind

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -167,7 +167,7 @@ We are now at the summit. The rarefied atmosphere of these transcendental height
 % Talk about the following topics:
 
 % The relationship between the synthetic unity of apperception and self-consciousness
-What is the nature of the synthetic unity of apperception, within this engine of cognition? We are shown that all cognition requires an intuition of the self. Does this make the synthetic unity of apperception the faculty (or nature) of self-awareness? Self awareness is one of the indisputable hallmarks of truly sapient beings -- it is a faculty which only until recently, we ascribed only to humans.\footnote{Empirical experiments with higher-order primates and dolphins are highly suggestive of self-awareness in other creatures.} For neither sensibility nor understanding are sufficient for intelligence. The former is within the domain of all sensate creatures -- from plants, to insects, to clockwork automata. Even the latter is not enough. Computer programs can be highly conceptual, capable of discretionary judgements, but yet they lack the general-purpose learning that is so characteristic of intelligence. The nature of this inadequacy seems to be plausible: while an artificial neural network is able to execute judgements on input, all such judgement takes the unwieldy form of contingent association. "When I support a body, then I feel a pressure of heaviness" \autocite[B143]{hackett}, v.s. "given input $x$, return output $y$." There is never that spark of true cognition, where "the nature of $x$ \emph{is} $y$." On a formal level, the very foundations of computational machine learning is \emph{entirely} based on Kant's "laws of association," with linear algebra serving as the building blocks of such associative neural networks. While it is beyond the scope of this paper to examine the architectural and technical foundations of artificial intelligence\footnote{Advances by Goodfellow et al. in generative adversarial neural networks (GANNs) may serve as an interesting comparative thesis to explore.}, the necessity of the synthetic unity of apperception for self-awareness is a thesis as intriguing indeed.
+What \emph{is} the nature of the synthetic unity of apperception, this ghost which fuels the engine of cognition? We are shown that all cognition requires it, as an a priori essence of the self. \emph{Does this make the synthetic unity of apperception the faculty (or nature) of self-awareness?} Self awareness is one of the indisputable hallmarks of truly sapient beings -- it is a faculty which only until recently, we ascribed only to humans.\footnote{Empirical experiments with higher-order primates and dolphins are highly suggestive of self-awareness in other creatures.} For neither sensibility nor understanding are sufficient for intelligence. The former is within the domain of all sensate creatures -- from plants, to insects, to clockwork automata. Even the latter is not enough. Computer programs can be highly conceptual, capable of discretionary judgements, but yet they lack the general-purpose learning that is so characteristic of intelligence. The nature of this inadequacy seems to be plausible: while an artificial neural network is able to execute judgements on input, all such judgement takes the unwieldy form of contingent association. "When I support a body, then I feel a pressure of heaviness" \autocite[B143]{hackett}, v.s. "given input $x$, return output $y$." There is never that spark of true cognition, where "the nature of $x$ \emph{is} $y$." On a formal level, the very foundations of computational machine learning is \emph{entirely} based on what Kant so disparagingly calls "the laws of association," with linear algebra serving as the building blocks of such associative neural networks. While it is beyond the scope of this paper to examine the architectural and technical foundations of artificial intelligence\footnote{Advances by Goodfellow et al. in generative adversarial neural networks (GANNs) may serve as an interesting comparative thesis to explore.}, the necessity of the synthetic unity of apperception for self-awareness is a thesis as intriguing indeed.
 
 \noindent
 Going back to the treatise of our erstwhile guide, Kant himself seems to offer an indirect, almost coquettish answer. He never definitively state whether or not the synthetic unity of apperception is the wellspring of self-awareness. However, amidst a brief aside on empirical psychology in the \emph{Paralogisms of Pure Reason}, he comments:
@@ -182,10 +182,10 @@ Going back to the treatise of our erstwhile guide, Kant himself seems to offer a
 Verbose, comprehensive, and tedious to a fault -- nonetheless Kant gives us a hint in the affirmative. Most tellingly, he is careful to make the distinction that our apperception is not the simple faculty of \emph{intuiting ourself} (i.e. self-reflection).\footnote{Historically, apperception is the empirical, psychological term of a kind of self-consciousness.} But rather, that all of our cognition ("the categories, and through them all objects") is done through this synthetic unity of apperception. It is definitely \emph{much} too early of us to crown such a faculty with the gaudy chalice of the term `soul' (and indeed, Kant himself answers in the negative -- at least, to the existence of an \emph{immortal} soul) -- but to take such a synthetic unity as the source for self-awareness is a plausible thesis indeed.
 
 % Whether or not the self-perceptive act is necessary for all cognitive agents
-Subscribing to such a gentle `plausible thesis' (even though such concessions to likelihood would cause Kant to shudder) yields us another very interesting conclusion. That this self-perceptive act -- call it self-awareness or the synthetic unity of apperception -- is a necessary condition for all cognitive beings. Without the imposition of the a priori form of the self into the very nature of intuition, the synthetic process of merging sensibility and understanding can never happen (as per Kant's demonstration in the Analytic). This conclusion provides us with a possible answer to Kant's prescient question, that which so haunts the author of this essay: "It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard" \autocite[B72]{hackett}. Perhaps it has indeed been decided \ldots\ and the lack of artificial, cognitive agents is the proof. There is room for further inquiry, however. Kant's casual qualification of his question -- "that of any finite thinking being", supports our examination, in the same circumspect way that a bloodstain may support a detective on a case.
+Subscribing to such a gentle `plausible thesis' (even though such concessions to common likelihood would cause Kant to shudder) yields us another interesting conclusion. That this self-perceptive act -- call it self-awareness or the synthetic unity of apperception -- \emph{is a necessary condition for all cognitive beings}. Without the imposition of the a priori form of the self into the very nature of intuition, the synthetic process of merging sensibility and understanding can never happen (as per Kant's demonstration in the Analytic). This conclusion provides us with a possible answer to Kant's prescient question, that which so haunts the author of this essay: "It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard" \autocite[B72]{hackett}. Perhaps it has indeed been decided \ldots\ and the lack of artificial, cognitive agents is the proof. There is room for further inquiry, however. Kant's casual qualification of his question -- "that of any finite thinking being", supports our examination, in the same circumspect way that a bloodstain may support a detective on a case.
 
 \noindent
-For consider the following hypothesis (this paragraph takes the form of a proof via \emph{reductio}). Let there be given a \emph{finite}, thinking being -- those a priori forms of intuition consist not of space nor time. Instead, it is capable of fulfilling all the sensory precepts of an objective intuition without said limitation (i.e. it is not simply insensate). Let it be further granted that such a creature is fully capable of the synthetic unity of apperception, viz. it is fully self-aware. What manner of a creature is this? It is a Flatlandian creature, the solipsistic Monarch of Pointland, a denizen of Edwin Abbott's novella.\footnote{In the novel \emph{Flatland: A Romance of Many Dimensions}, the protagonist (a Square) lives in a 2-dimensional world. During the course of their adventures, they ultimately visit `Pointland' -- inhabited by a single Point, who perceives all others as thoughts originating in his own mind.} Sensate, but yet neither in space nor time, such a creature perceives all sensation as thoughts originating in his own mind. The lack of a spatial intuition by necessity abolishes the \emph{outer sense}, which makes all objective perception a part of the self. Likewise, the lack of a temporal intuition by necessity abolishes the inner sense -- as well as to make all occurrences simultaneous, and co-ordinate. Such a creature -- who exists as it's existence has been granted -- is by it's very nature is \emph{not} a finite, thinking being. To perceive all as a part of the self, separated not by distance, nor by time -- is to be an infinite, eternal being. Thus completes the arc of this proof via \emph{reductio}, and the demonstration is complete. The proposition is that all finite thinking beings must cognise through the a priori forms of space, and time.
+For consider the following hypothesis (this paragraph takes the form of a proof via \emph{reductio}). Let there be given a \emph{finite}, thinking being -- those a priori forms of intuition consist not of space nor time. Instead, it is capable of fulfilling all the sensory precepts of an objective intuition without said limitation (i.e. it is not simply insensate). Let it be further granted that such a creature is fully capable of the synthetic unity of apperception, viz. it is fully self-aware. What manner of a creature is this? It is a Flatlandian creature, the solipsistic Monarch of Pointland, a denizen of Edwin Abbott's novella.\footnote{In the novel \emph{Flatland: A Romance of Many Dimensions}, the protagonist (a Square) lives in a 2-dimensional world. During the course of their adventures, they ultimately visit `Pointland' -- inhabited by a single Point, who perceives all others as thoughts originating in his own mind.} Sensate, but yet neither in space nor time, such a creature perceives all sensation as thoughts originating in his own mind. The lack of a spatial intuition by necessity abolishes the \emph{outer sense}, which makes all objective perception a part of the self. Likewise, the lack of a temporal intuition by necessity abolishes the inner sense -- as well as to make all occurrences simultaneous, and concurrent. Such a creature -- who exists as it's existence has been granted -- is by it's very nature is not a \emph{finite} thinking being. To perceive all as a part of the self, separated neither by distance, nor by time -- is to be an infinite, eternal being. Thus completes the arc of this proof via \emph{reductio}, and the demonstration is complete. The proposition is that all finite thinking beings must cognise through the a priori forms of space, and time.
 
 \section*{The Limitations of Rational Science}
 % The objective/subjective nature of the empirical sciences
